Fix favicon link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link
             rel="icon"
             type="image/png"
-            href="https://cinemon.app/image.png"
+            href="https://cinemon.app/favicon.ico"
         />
     </head>
     <body
