Improve beta copy and mailto: functionality

--- a/index.html
+++ b/index.html
@@ -384,10 +384,19 @@
                         <div class="text-container">
                             <h2>Join the CineMon Beta</h2>
                             <p>
-                                If you're interested in joining the CineMon
-                                public beta send an email to
-                                <strong>beta@cinemon.app</strong> or use this
-                                button to open your default mail app.
+                                Would you like to help us beta test CineMon?
+                                Tell us who you are and how you will use the app
+                                in an email to
+                                <strong>beta@cinemon.app</strong>, or use this
+                                button to open your default mail app.<br />
+                                <small
+                                    ><strong
+                                        >Please note: you will need an iPad with
+                                        a USB-C port or a Mac, and an HDMI or
+                                        SDI to USB video adapter to use CineMon
+                                        with an external camera.</strong
+                                    ></small
+                                >
                             </p>
                         </div>
                         <!-- end of text-container -->
@@ -401,8 +410,21 @@
                         >
                             <input
                                 type="hidden"
-                                name="Subject"
+                                name="subject"
                                 value="CineMon&nbsp;beta&nbsp;request"
+                            />
+                            <input
+                                type="hidden"
+                                name="body"
+                                value="Please&nbsp;include&nbsp;the&nbsp;following&nbsp;information&nbsp;to&nbsp;join&nbsp;the&nbsp;CineMon&nbsp;public&nbsp;beta
+
+Full&nbsp;Name:&nbsp;
+Country&nbsp;of&nbsp;residence:&nbsp;
+Occupation:&nbsp;
+
+In&nbsp;a&nbsp;few&nbsp;words,&nbsp;please&nbsp;tell&nbsp;us&nbsp;why&nbsp;you&nbsp;would&nbsp;like&nbsp;to&nbsp;join&nbsp;the&nbsp;CineMon&nbsp;beta&nbsp;and&nbsp;how&nbsp;you&nbsp;can&nbsp;help&nbsp;during&nbsp;the&nbsp;testing&nbsp;phase.&nbsp;We're&nbsp;looking&nbsp;for&nbsp;people&nbsp;who&nbsp;can&nbsp;test&nbsp;it&nbsp;in&nbsp;professional&nbsp;environments&nbsp;and&nbsp;are&nbsp;willing&nbsp;to&nbsp;share&nbsp;feedback&nbsp;to&nbsp;help&nbsp;improve&nbsp;the&nbsp;app:
+
+"
                             />
                             <div class="form-group">
                                 <button
