Use a Google form for the beta request

--- a/index.html
+++ b/index.html
@@ -385,10 +385,8 @@
                             <h2>Join the CineMon Beta</h2>
                             <p>
                                 Would you like to help us beta test CineMon?
-                                Tell us who you are and how you will use the app
-                                in an email to
-                                <strong>beta@cinemon.app</strong>, or use this
-                                button to open your default mail app.<br />
+                                Click this button to fill out a beta request
+                                form<br />
                                 <small
                                     ><strong
                                         >Please note: you will need an iPad with
@@ -402,27 +400,13 @@
                         <!-- end of text-container -->
                     </div>
                     <!-- end of col -->
-                    <div class="col-lg-6">
-                        <!-- Registration Form -->
-                        <form
-                            id="registrationForm"
-                            action="mailto:beta@cinemon.app"
+                    <div class="col-lg-6 text-center">
+                        <a
+                            href="https://docs.google.com/forms/d/e/1FAIpQLSfrdcN8qptdusFc-1lfr5TaA-T1XMCVLN-okZsdwPO2a1NoNQ/viewform?usp=header"
+                            class="btn-solid-lg"
                         >
-                            <input
-                                type="hidden"
-                                name="subject"
-                                value="CineMon&nbsp;beta&nbsp;request"
-                            />
-                            <div class="form-group">
-                                <button
-                                    type="submit"
-                                    class="form-control-submit-button"
-                                >
-                                    REQUEST BETA ACCESS
-                                </button>
-                            </div>
-                        </form>
-                        <!-- end of registration form -->
+                            REQUEST BETA ACCESS
+                        </a>
                     </div>
                     <!-- end of col -->
                 </div>
@@ -1504,9 +1488,7 @@
                             meantime, consider joining the
                             <a href="#beta">public beta</a>
                         </p>
-                        <a class="btn-solid-lg" href="#your-link"
-                            >COMING SOON</a
-                        >
+                        <a class="btn-solid-lg" href="">COMING SOON</a>
                     </div>
                     <!-- end of col -->
                 </div>
