Change contact email address to hello@

--- a/index.html
+++ b/index.html
@@ -1570,8 +1570,8 @@
                             </span>
                             <p class="p-small">
                                 We would love to hear from you
-                                <a href="mailto:info@cinemon.app"
-                                    ><strong>info@cinemon.app</strong></a
+                                <a href="mailto:hello@cinemon.app"
+                                    ><strong>hello@cinemon.app</strong></a
                                 >
                             </p>
                         </div>
