Change footer and move spot meters section to the top

--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
                                 >DOWNLOAD</a
                             >
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="#footer"
+                                >CONTACT</a
+                            >
+                        </li>
                     </ul>
                 </div>
                 <!-- end of navbar-collapse -->
@@ -416,6 +421,76 @@
         </div>
         <!-- end of form-1 -->
         <!-- end of registration -->
+
+        <!-- Details Spot Meters -->
+        <div id="details-spotmeters" class="basic-1-alt bg-dark-blue">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-xl-5">
+                        <div class="text-container">
+                            <h2>Image-based Spot Metering</h2>
+                            <p>
+                                A CineMon exclusive! The patent pending,
+                                image-based spot meter tool can show actual
+                                scene luminance values (relative to midele gray)
+                                under each movable probe. Get accurate exposure
+                                measurements in photometric units (stops/EVs),
+                                and visualize contrast ratios without using a
+                                manual light meter. This feature only works with
+                                supported log encoded video signals. v1.0
+                                supports log profiles from Blackmagic Design,
+                                ARRI, Sony, Fujifilm, Canon, Nikon, Panasonic,
+                                and RED.
+                            </p>
+                            <ul class="list-unstyled li-space-lg">
+                                <li class="media">
+                                    <i class="fas fa-square"></i>
+                                    <div class="media-body">
+                                        <strong
+                                            >Customize middle gray level</strong
+                                        >
+                                    </div>
+                                </li>
+                                <li class="media">
+                                    <i class="fas fa-square"></i>
+                                    <div class="media-body">
+                                        <strong
+                                            >Use probe to set middle gray
+                                            value</strong
+                                        >
+                                    </div>
+                                </li>
+                                <li class="media">
+                                    <i class="fas fa-square"></i>
+                                    <div class="media-body">
+                                        <strong
+                                            >Show contrast ratio overlay</strong
+                                        >
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- end of text-container -->
+                    </div>
+                    <!-- end of col -->
+                    <div class="col-lg-6 col-xl-7">
+                        <div class="image-container">
+                            <img
+                                class="img-fluid"
+                                src="images/CineMon-iPad-SpotMeters.png"
+                                alt="alternative"
+                            />
+                        </div>
+                        <!-- end of image-container -->
+                    </div>
+                    <!-- end of col -->
+                </div>
+                <!-- end of row -->
+            </div>
+            <!-- end of container -->
+        </div>
+        <!-- end of basic-1 -->
+        <!-- end of details-spotmeters -->
 
         <!-- Details Composition -->
         <div id="details-composition" class="basic-1 bg-dark-blue">
@@ -1122,91 +1197,10 @@
         <!-- end of lightbox -->
         <!-- end of details false color lightbox -->
 
-        <!-- Details Spot Meters -->
-        <div id="details-spotmeters" class="basic-1-alt bg-dark-blue">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-xl-5">
-                        <div class="text-container">
-                            <h2>Image-based Spot Metering</h2>
-                            <p>
-                                A CineMon exclusive! The patent pending,
-                                image-based spot meter tool can show actual
-                                scene luminance values (relative to midele gray)
-                                under each movable probe. Get accurate exposure
-                                measurements in photometric units (stops/EVs),
-                                and visualize contrast ratios without using a
-                                manual light meter. This feature only works with
-                                supported log encoded video signals. v1.0
-                                supports log profiles from Blackmagic Design,
-                                ARRI, Sony, Fujifilm, Canon, Nikon, Panasonic,
-                                and RED.
-                            </p>
-                            <ul class="list-unstyled li-space-lg">
-                                <li class="media">
-                                    <i class="fas fa-square"></i>
-                                    <div class="media-body">
-                                        <strong
-                                            >Customize middle gray level</strong
-                                        >
-                                    </div>
-                                </li>
-                                <li class="media">
-                                    <i class="fas fa-square"></i>
-                                    <div class="media-body">
-                                        <strong
-                                            >Use probe to set middle gray
-                                            value</strong
-                                        >
-                                    </div>
-                                </li>
-                                <li class="media">
-                                    <i class="fas fa-square"></i>
-                                    <div class="media-body">
-                                        <strong
-                                            >Show contrast ratio overlay</strong
-                                        >
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- end of text-container -->
-                    </div>
-                    <!-- end of col -->
-                    <div class="col-lg-6 col-xl-7">
-                        <div class="image-container">
-                            <img
-                                class="img-fluid"
-                                src="images/CineMon-iPad-SpotMeters.png"
-                                alt="alternative"
-                            />
-                        </div>
-                        <!-- end of image-container -->
-                    </div>
-                    <!-- end of col -->
-                </div>
-                <!-- end of row -->
-            </div>
-            <!-- end of container -->
-        </div>
-        <!-- end of basic-1 -->
-        <!-- end of details-spotmeters -->
-
         <!-- Details Scopes -->
-        <div id="details-scopes" class="basic-1 bg-dark-blue">
+        <div id="details-scopes" class="basic-1-alt bg-dark-blue">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-xl-7">
-                        <div class="image-container">
-                            <img
-                                class="img-fluid"
-                                src="images/CineMon-iPad-Scopes-4Up-Edit.png"
-                                alt="alternative"
-                            />
-                        </div>
-                        <!-- end of image-container -->
-                    </div>
-                    <!-- end of col -->
                     <div class="col-lg-6 col-xl-5">
                         <div class="text-container">
                             <h2>Professional Video Scopes</h2>
@@ -1249,6 +1243,17 @@
                             >
                         </div>
                         <!-- end of text-container -->
+                    </div>
+                    <!-- end of col -->
+                    <div class="col-lg-6 col-xl-7">
+                        <div class="image-container">
+                            <img
+                                class="img-fluid"
+                                src="images/CineMon-iPad-Scopes-4Up-Edit.png"
+                                alt="alternative"
+                            />
+                        </div>
+                        <!-- end of image-container -->
                     </div>
                     <!-- end of col -->
                 </div>
@@ -1319,9 +1324,20 @@
         <!-- end of details lightbox -->
 
         <!-- Details Presets -->
-        <div id="details-presets" class="basic-1-alt bg-dark-blue">
+        <div id="details-presets" class="basic-1 bg-dark-blue">
             <div class="container">
                 <div class="row">
+                    <div class="col-lg-6 col-xl-7">
+                        <div class="image-container">
+                            <img
+                                class="img-fluid"
+                                src="images/CineMon-iPad-Presets.png"
+                                alt="alternative"
+                            />
+                        </div>
+                        <!-- end of image-container -->
+                    </div>
+                    <!-- end of col -->
                     <div class="col-lg-6 col-xl-5">
                         <div class="text-container">
                             <h2>Make it Your Own</h2>
@@ -1378,17 +1394,6 @@
                             </ul>
                         </div>
                         <!-- end of text-container -->
-                    </div>
-                    <!-- end of col -->
-                    <div class="col-lg-6 col-xl-7">
-                        <div class="image-container">
-                            <img
-                                class="img-fluid"
-                                src="images/CineMon-iPad-Presets.png"
-                                alt="alternative"
-                            />
-                        </div>
-                        <!-- end of image-container -->
                     </div>
                     <!-- end of col -->
                 </div>
@@ -1500,7 +1505,7 @@
         <!-- end of purchase -->
 
         <!-- Footer -->
-        <div class="footer">
+        <div id="footer" class="footer">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -1565,7 +1570,13 @@
                             <span class="fa-stack">
                                 <a href="https://x.com/CineMonApp">
                                     <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-twitter fa-stack-1x"></i>
+                                    <i class="fab fa-x-twitter fa-stack-1x"></i>
+                                </a>
+                            </span>
+                            <span class="fa-stack">
+                                <a href="https://www.tiktok.com/@cinemonapp">
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-tiktok fa-stack-1x"></i>
                                 </a>
                             </span>
                             <p class="p-small">
@@ -1593,7 +1604,9 @@
                     <div class="col-lg-12">
                         <p class="p-small">
                             Copyright ©
-                            <a href="#your-link">CineSpices, LLC</a>
+                            <a href="#your-link"
+                                >CineSpices, LLC, 2024. All rights reserved.</a
+                            >
                         </p>
                     </div>
                     <!-- end of col -->
