--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <li class="nav-item">
                             <a
                                 class="nav-link page-scroll"
-                                href="#details-composition"
+                                href="#details-spotmeters"
                                 >FEATURES</a
                             >
                         </li>
@@ -210,7 +210,7 @@
                                                     >
                                                     <a
                                                         class="btn-outline-lg page-scroll"
-                                                        href="#details-composition"
+                                                        href="#details-spotmeters"
                                                         >DISCOVER</a
                                                     >
                                                 </div>
@@ -257,7 +257,7 @@
                                                     >
                                                     <a
                                                         class="btn-outline-lg page-scroll"
-                                                        href="#details-composition"
+                                                        href="#details-spotmeters"
                                                         >DISCOVER</a
                                                     >
                                                 </div>
@@ -304,7 +304,7 @@
                                                     >
                                                     <a
                                                         class="btn-outline-lg page-scroll"
-                                                        href="#details-composition"
+                                                        href="#details-spotmeters"
                                                         >DISCOVER</a
                                                     >
                                                 </div>
