--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                             <p>
                                 A CineMon exclusive! The patent pending,
                                 image-based spot meter tool can show actual
-                                scene luminance values (relative to midele gray)
+                                scene luminance values (relative to middle gray)
                                 under each movable probe. Get accurate exposure
                                 measurements in photometric units (stops/EVs),
                                 and visualize contrast ratios without using a
@@ -829,7 +829,7 @@
                         <div class="text-container">
                             <h2>Focus Assist</h2>
                             <p>
-                                The Focus Assit tool (a.k.a. focus peaking) can
+                                The Focus Assist tool (a.k.a. focus peaking) can
                                 help with manual focus lenses by highlighting
                                 high contrast edges that indicate the in-focus
                                 plane.
@@ -956,7 +956,7 @@
                                 to preview the image as if it had been properly
                                 exposed? Use the photometrically accurate
                                 exposure adjustment slider. Preview contrast
-                                changes and manupulate saturation. Zero out
+                                changes and manipulate saturation. Zero out
                                 saturation to preview B&W capture or enhance
                                 focus peaking.
                             </p>
@@ -1075,7 +1075,7 @@
                         <div class="text-container">
                             <h2>Customizable False Color</h2>
                             <p>
-                                Apply your favorite False Color shceme, or even
+                                Apply your favorite False Color scheme, or even
                                 create your own, to quickly nail exposure, every
                                 time. CineMon includes some sample schemes based
                                 on popular industry standards, including
@@ -1210,7 +1210,7 @@
                                 support fluid resizing and placement, and are
                                 highly configurable. All scopes are GPU
                                 accelerated and have been optimized to use
-                                minimal computing resoruces to extend battery
+                                minimal computing resources to extend battery
                                 life.
                             </p>
                             <ul class="list-unstyled li-space-lg">
