--- a/index.html
+++ b/index.html
@@ -316,6 +316,51 @@
                                     </div>
                                     <!-- end of swiper-slide -->
                                     <!-- end of slide -->
+
+                                    <!-- Slide -->
+                                    <div class="swiper-slide">
+                                        <div class="row">
+                                            <div class="col-lg-6 col-xl-7">
+                                                <div class="image-container">
+                                                    <img
+                                                        class="img-fluid"
+                                                        src="images/CineMon-Connection-Diagram.png"
+                                                        alt="alternative"
+                                                    />
+                                                </div>
+                                                <!-- end of image-container -->
+                                            </div>
+                                            <!-- end of col -->
+                                            <div class="col-lg-6 col-xl-5">
+                                                <div class="text-container">
+                                                    <h1 class="h1-large">
+                                                        Hardware Choice
+                                                    </h1>
+                                                    <p class="p-large">
+                                                        Supports a wide range of
+                                                        UVC video hardware
+                                                        options, with additional
+                                                        pro options on Mac
+                                                    </p>
+                                                    <a
+                                                        class="btn-solid-lg page-scroll"
+                                                        href="#beta"
+                                                        >JOIN BETA</a
+                                                    >
+                                                    <a
+                                                        class="btn-outline-lg page-scroll"
+                                                        href="#details-spotmeters"
+                                                        >DISCOVER</a
+                                                    >
+                                                </div>
+                                                <!-- end of text-container -->
+                                            </div>
+                                            <!-- end of col -->
+                                        </div>
+                                        <!-- end of row -->
+                                    </div>
+                                    <!-- end of swiper-slide -->
+                                    <!-- end of slide -->
                                 </div>
                                 <!-- end of swiper-wrapper -->
 
