--- a/index.html
+++ b/index.html
@@ -1624,6 +1624,12 @@
                                     <i class="fab fa-tiktok fa-stack-1x"></i>
                                 </a>
                             </span>
+                            <span class="fa-stack">
+                                <a href="https://discord.gg/GRNjd5yX6p">
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-discord fa-stack-1x"></i>
+                                </a>
+                            </span>
                             <p class="p-small">
                                 We would love to hear from you
                                 <a href="mailto:hello@cinemon.app"
