Use camera instead of video or cinema. Add Instagram logo/link.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- SEO Meta Tags -->
         <meta
             name="description"
-            content="CineMon transforms your iPad or Mac into a professional video monitor. It includes many tools to assist with composition, lighting, exposure, looks, quality standards, and more. It's made for filmmakers, video professionals, content creators and anyone who works with video."
+            content="CineMon transforms your iPad or Mac into a professional camera monitor. It includes many tools to assist with composition, lighting, exposure, looks, quality standards, and more. It's made for filmmakers, video professionals, content creators and anyone who works with video."
         />
         <meta name="author" content="Ike Arias" />
 
@@ -21,12 +21,12 @@
         <!-- website link -->
         <meta
             property="og:title"
-            content="CineMon - iPad and Mac professional cinema monitor"
+            content="CineMon - iPad and Mac professional camera monitor"
         />
         <!-- title shown in the actual shared post -->
         <meta
             property="og:description"
-            content="CineMon transforms your iPad or Mac into a professional video monitor. It includes many tools to assist with composition, lighting, exposure, looks, quality standards, and more. It's made for filmmakers, video professionals, content creators and anyone who works with video."
+            content="CineMon transforms your iPad or Mac into a professional camera monitor. It includes many tools to assist with composition, lighting, exposure, looks, quality standards, and more. It's made for filmmakers, video professionals, content creators and anyone who works with video."
         />
         <!-- description shown in the actual shared post -->
         <meta
@@ -41,11 +41,11 @@
         <meta name="twitter:site" content="@CineMonApp" />
         <meta
             name="twitter:title"
-            content="CineMon - iPad and Mac professional cinema monitor"
+            content="CineMon - iPad and Mac professional camera monitor"
         />
         <meta
             name="twitter:description"
-            content="CineMon transforms your iPad or Mac into a professional video monitor. It includes many tools to assist with composition, lighting, exposure, looks, quality standards, and more. It's made for filmmakers, video professionals, content creators and anyone who works with video."
+            content="CineMon transforms your iPad or Mac into a professional camera monitor. It includes many tools to assist with composition, lighting, exposure, looks, quality standards, and more. It's made for filmmakers, video professionals, content creators and anyone who works with video."
         />
         <meta
             name="twitter:image"
@@ -201,7 +201,7 @@
                                                     <p class="p-large">
                                                         Transform your iPad or
                                                         Mac into a professional
-                                                        cinema monitor
+                                                        camera monitor
                                                     </p>
                                                     <a
                                                         class="btn-solid-lg page-scroll"
@@ -1610,6 +1610,12 @@
                                     <i
                                         class="fab fa-facebook-f fa-stack-1x"
                                     ></i>
+                                </a>
+                            </span>
+                            <span class="fa-stack">
+                                <a href="https://www.instagram.com/cinemonapp/">
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-instagram fa-stack-1x"></i>
                                 </a>
                             </span>
                             <span class="fa-stack">
