--- a/app/privacy.html
+++ b/app/privacy.html
@@ -35,13 +35,13 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
             rel="stylesheet"
         />
-        <link href="css/bootstrap.css" rel="stylesheet" />
-        <link href="css/solid.min.css" rel="stylesheet" />
-        <link href="css/brands.min.css" rel="stylesheet" />
-        <link href="css/fontawesome.min.css" rel="stylesheet" />
-        <link href="css/swiper.css" rel="stylesheet" />
-        <link href="css/magnific-popup.css" rel="stylesheet" />
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="../css/bootstrap.css" rel="stylesheet" />
+        <link href="../css/solid.min.css" rel="stylesheet" />
+        <link href="../css/brands.min.css" rel="stylesheet" />
+        <link href="../css/fontawesome.min.css" rel="stylesheet" />
+        <link href="../css/swiper.css" rel="stylesheet" />
+        <link href="../css/magnific-popup.css" rel="stylesheet" />
+        <link href="../css/styles.css" rel="stylesheet" />
 
         <!-- Favicon  -->
         <link rel="icon" href="favicon.ico" />
@@ -51,11 +51,13 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <div class="container">
                 <!-- Text Logo - Use this if you don't have a graphic logo -->
-                <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Revo</a> -->
+                <!-- <a class="navbar-brand logo-text page-scroll" href="../index.html">Revo</a> -->
 
                 <!-- Image Logo -->
-                <a class="navbar-brand logo-image" href="index.html"
-                    ><img src="images/CineMon-Logo-Horz.png" alt="alternative"
+                <a class="navbar-brand logo-image" href="../index.html"
+                    ><img
+                        src="../images/CineMon-Logo-Horz.png"
+                        alt="alternative"
                 /></a>
 
                 <button
@@ -74,42 +76,42 @@
                         <li class="nav-item">
                             <a
                                 class="nav-link page-scroll"
-                                href="index.html#header"
+                                href="../index.html#header"
                                 >HOME <span class="sr-only">(current)</span></a
                             >
                         </li>
                         <li class="nav-item">
                             <a
                                 class="nav-link page-scroll"
-                                href="index.html#demo"
+                                href="../index.html#demo"
                                 >DEMO</a
                             >
                         </li>
                         <li class="nav-item">
                             <a
                                 class="nav-link page-scroll"
-                                href="index.html#beta"
+                                href="../index.html#beta"
                                 >BETA</a
                             >
                         </li>
                         <li class="nav-item">
                             <a
                                 class="nav-link page-scroll"
-                                href="index.html#details-composition"
+                                href="../index.html#details-composition"
                                 >FEATURES</a
                             >
                         </li>
                         <li class="nav-item">
                             <a
                                 class="nav-link page-scroll"
-                                href="index.html#design"
+                                href="../index.html#design"
                                 >DESIGN</a
                             >
                         </li>
                         <li class="nav-item">
                             <a
                                 class="nav-link page-scroll"
-                                href="index.html#purchase"
+                                href="../index.html#purchase"
                                 >DOWNLOAD</a
                             >
                         </li>
@@ -357,17 +359,17 @@
         <!-- end of copyright -->
 
         <!-- Scripts -->
-        <script src="js/jquery.min.js"></script>
+        <script src="../js/jquery.min.js"></script>
         <!-- jQuery for Bootstrap's JavaScript plugins -->
-        <script src="js/bootstrap.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
         <!-- Bootstrap framework -->
-        <script src="js/jquery.easing.min.js"></script>
+        <script src="../js/jquery.easing.min.js"></script>
         <!-- jQuery Easing for smooth scrolling between anchors -->
-        <script src="js/swiper.min.js"></script>
+        <script src="../js/swiper.min.js"></script>
         <!-- Swiper for image and text sliders -->
-        <script src="js/jquery.magnific-popup.js"></script>
+        <script src="../js/jquery.magnific-popup.js"></script>
         <!-- Magnific Popup for lightboxes -->
-        <script src="js/scripts.js"></script>
+        <script src="../js/scripts.js"></script>
         <!-- Custom scripts -->
     </body>
 </html>
