--- a/app/privacy.html
+++ b/app/privacy.html
@@ -47,6 +47,16 @@
         <link rel="icon" href="favicon.ico" />
     </head>
     <body data-spy="scroll" data-target=".fixed-top">
+        <!-- Google Tag Manager (noscript) -->
+        <noscript
+            ><iframe
+                src="https://www.googletagmanager.com/ns.html?id=GTM-W5RFBKS9"
+                height="0"
+                width="0"
+                style="display: none; visibility: hidden"
+            ></iframe
+        ></noscript>
+        <!-- End Google Tag Manager (noscript) -->
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <div class="container">
@@ -74,45 +84,40 @@
                 >
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a
-                                class="nav-link page-scroll"
-                                href="../index.html#header"
+                            <a class="nav-link page-scroll" href="#header"
                                 >HOME <span class="sr-only">(current)</span></a
                             >
                         </li>
                         <li class="nav-item">
-                            <a
-                                class="nav-link page-scroll"
-                                href="../index.html#demo"
+                            <a class="nav-link page-scroll" href="#demo"
                                 >DEMO</a
                             >
                         </li>
                         <li class="nav-item">
-                            <a
-                                class="nav-link page-scroll"
-                                href="../index.html#beta"
+                            <a class="nav-link page-scroll" href="#beta"
                                 >BETA</a
                             >
                         </li>
                         <li class="nav-item">
                             <a
                                 class="nav-link page-scroll"
-                                href="../index.html#details-composition"
+                                href="#details-spotmeters"
                                 >FEATURES</a
                             >
                         </li>
                         <li class="nav-item">
-                            <a
-                                class="nav-link page-scroll"
-                                href="../index.html#design"
+                            <a class="nav-link page-scroll" href="#design"
                                 >DESIGN</a
                             >
                         </li>
                         <li class="nav-item">
-                            <a
-                                class="nav-link page-scroll"
-                                href="../index.html#purchase"
+                            <a class="nav-link page-scroll" href="#purchase"
                                 >DOWNLOAD</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="#footer"
+                                >CONTACT</a
                             >
                         </li>
                     </ul>
