--- a/app/terms.html
+++ b/app/terms.html
@@ -451,7 +451,7 @@
         <!-- end of basic -->
 
         <!-- Footer -->
-        <div class="footer">
+        <div id="footer" class="footer">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -471,11 +471,13 @@
                         <div class="footer-col second">
                             <h6>Links</h6>
                             <ul class="list-unstyled li-space-lg p-small">
+                                <!-- --
                                 <li>
                                     Important:
                                     <a href="terms.html">Terms & Conditions</a>,
                                     <a href="privacy.html">Privacy Policy</a>
                                 </li>
+                                -->
                                 <li>
                                     Menu:
                                     <a class="page-scroll" href="#header"
@@ -502,7 +504,9 @@
                         <!-- end of footer-col -->
                         <div class="footer-col third">
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a
+                                    href="https://www.facebook.com/profile.php?id=61570426725530"
+                                >
                                     <i class="fas fa-circle fa-stack-2x"></i>
                                     <i
                                         class="fab fa-facebook-f fa-stack-1x"
@@ -510,21 +514,33 @@
                                 </a>
                             </span>
                             <span class="fa-stack">
-                                <a href="#your-link">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-twitter fa-stack-1x"></i>
-                                </a>
-                            </span>
-                            <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://www.instagram.com/cinemonapp/">
                                     <i class="fas fa-circle fa-stack-2x"></i>
                                     <i class="fab fa-instagram fa-stack-1x"></i>
                                 </a>
                             </span>
+                            <span class="fa-stack">
+                                <a href="https://x.com/CineMonApp">
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-x-twitter fa-stack-1x"></i>
+                                </a>
+                            </span>
+                            <span class="fa-stack">
+                                <a href="https://www.tiktok.com/@cinemonapp">
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-tiktok fa-stack-1x"></i>
+                                </a>
+                            </span>
+                            <span class="fa-stack">
+                                <a href="https://discord.gg/GRNjd5yX6p">
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-discord fa-stack-1x"></i>
+                                </a>
+                            </span>
                             <p class="p-small">
                                 We would love to hear from you
-                                <a href="mailto:info@cinemon.app"
-                                    ><strong>info@cinemon.app</strong></a
+                                <a href="mailto:hello@cinemon.app"
+                                    ><strong>hello@cinemon.app</strong></a
                                 >
                             </p>
                         </div>
@@ -546,7 +562,9 @@
                     <div class="col-lg-12">
                         <p class="p-small">
                             Copyright ©
-                            <a href="#your-link">CineSpices, LLC</a>
+                            <a href="#your-link"
+                                >CineSpices, LLC, 2024. All rights reserved.</a
+                            >
                         </p>
                     </div>
                     <!-- end of col -->
@@ -559,17 +577,17 @@
         <!-- end of copyright -->
 
         <!-- Scripts -->
-        <script src="../js/jquery.min.js"></script>
+        <script src="js/jquery.min.js"></script>
         <!-- jQuery for Bootstrap's JavaScript plugins -->
-        <script src="../js/bootstrap.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         <!-- Bootstrap framework -->
-        <script src="../js/jquery.easing.min.js"></script>
+        <script src="js/jquery.easing.min.js"></script>
         <!-- jQuery Easing for smooth scrolling between anchors -->
-        <script src="../js/swiper.min.js"></script>
+        <script src="js/swiper.min.js"></script>
         <!-- Swiper for image and text sliders -->
-        <script src="../js/jquery.magnific-popup.js"></script>
+        <script src="js/jquery.magnific-popup.js"></script>
         <!-- Magnific Popup for lightboxes -->
-        <script src="../js/scripts.js"></script>
+        <script src="js/scripts.js"></script>
         <!-- Custom scripts -->
     </body>
 </html>
